Fix menu on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -106,7 +106,8 @@
     text-align: left;
   }
   
-  .dropdown:hover .dropdown-content {
+  .dropdown:hover, .dropdown:active 
+  .dropdown-content {
     display: block;
   }
 
